Styled the buttons, Added SQL Code snippets in JS comments, Added snapshots to second tool title.

--- a/index.css
+++ b/index.css
@@ -10,3 +10,9 @@ label {
 .warning {
 	color: yellow;
 }
+button {
+	margin-top: 5px;
+}
+.ui-button,  .ui-button-text .ui-button {
+	font-size: 14px !important; 
+}
